<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activities.RegisterCharity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="83dp">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="89dp"
                    android:layout_alignParentStart="true"
                    android:padding="5dp"
                    android:src="@drawable/menu" />


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="1dp"
                    android:src="@drawable/icon" />

            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/topic4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"


            android:hint="@string/topic4"
            android:text="CHARITY MEMBERSHIP FORM "
            android:textAlignment="center"
            android:textColor="@color/topic"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginVertical="50dp"
        android:background="#F3D8F8"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="#121010"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/NICLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NIC"
            android:hint="@string/NIC"
            android:textColor="#121010"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/NICLabelEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:hint="@string/Email"
            android:textColor="#121010"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="83dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:text="Gender"
            android:hint="@string/Gender"
            android:textColor="#121010"

            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="205dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="100dp"
                android:layout_height="33dp"
                android:onClick="radioButtonhandler"
                android:text="Male"
                android:textColor="#121010"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="100dp"
                android:layout_height="33dp"
                android:onClick="radioButtonhandler"
                android:text="Female"
                android:textColor="#121010"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.655"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:onClick="radioButtonhandler"
                android:text="Other"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.949"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RadioGroup>


        <EditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="#121010"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Motive of joining the club"
            android:hint="@string/motive"
            android:textColor="#121010"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#E2C7E6"
                android:hint="" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Terms"
            android:text="Agree to all terms and conditions" />


    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg"
        android:text="Submit" />


</LinearLayout>

