<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.charityDetails"
    android:background="@drawable/background"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:orientation="horizontal"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="@dimen/menu_wh"
                    android:layout_height="@dimen/menu_wh"
                    android:layout_alignParentStart="true"
                    android:padding="@dimen/menu_padding"
                    android:src="@drawable/menu"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <ImageView
                    android:layout_width="@dimen/icon_wh"
                    android:layout_height="@dimen/icon_wh"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/icon_margin"
                    android:layout_marginTop="@dimen/icon_margin"
                    android:layout_marginEnd="@dimen/icon_margin"
                    android:layout_marginBottom="@dimen/icon_margin"
                    android:padding="@dimen/icon_padding"
                    android:src="@drawable/icon"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </LinearLayout>



            <TextView
                android:id="@+id/pCharName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/topic_text"
                android:textStyle="bold"
                tools:ignore="VisualLintBounds" />





    </LinearLayout>

    <include
        layout="@layout/item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:scrollbarSize="20dp"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                tools:cardCornerRAdius="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:padding="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:padding="2dp"
                            android:src="@drawable/motive"
                            android:layout_marginStart="5dp"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:text="Charity ID"
                            android:layout_marginStart="10dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:textColor="#605E5E"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>

                    <TextView

                        android:id="@+id/pCharID"

                        android:layout_width="322dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/tools"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRAdius="5dp">
        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="1dp"
                    android:gravity="center"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:ignore="RelativeOverlap,UseCompoundDrawables,UselessParent">
                    <ImageView
                        android:padding="5dp"
                        android:src="@drawable/ic_person"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        card_view:ignore="ContentDescription" />
                    <TextView
                        android:text="@string/Founder"
                        android:textSize="16sp"
                        android:layout_margin="5dp"
                        android:textStyle="bold|normal"
                        android:textColor="#F8554A4A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>


            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView

                    android:padding="2dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_home"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    card_view:ignore="ContentDescription" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView

                        android:id="@+id/pCharFou"

                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/tools"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRAdius="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:padding="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:ignore="UseCompoundDrawables">
                        <ImageView
                            android:padding="2dp"
                            android:src="@drawable/ic_phone"
                            android:layout_marginStart="5dp"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            card_view:ignore="ContentDescription" />
                        <TextView
                            android:text="@string/mobile"
                            android:layout_marginStart="10dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:textColor="#605E5E"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>
                    <TextView
                        android:id="@+id/pCharPhone"

                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/tools"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRAdius="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:padding="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:ignore="UseCompoundDrawables">
                        <ImageView
                            android:padding="2dp"
                            android:src="@drawable/ic_email"
                            android:layout_marginStart="5dp"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            card_view:ignore="ContentDescription" />
                        <TextView
                            android:text="@string/Email"
                            android:layout_marginStart="10dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:textColor="#605E5E"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>
                    <TextView

                        android:id="@+id/pCharEmail"

                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/tools"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRAdius="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:padding="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:ignore="UseCompoundDrawables">
                        <ImageView
                            android:padding="2dp"
                            android:src="@drawable/motive"
                            android:layout_marginStart="5dp"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            card_view:ignore="ContentDescription" />
                        <TextView
                            android:text="@string/Motive"
                            android:layout_marginStart="10dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:textColor="#605E5E"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>
                    <TextView

                        android:id="@+id/pCharMotive"

                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <!--<include layout="@layout/rating" /> -->


            <Button
                android:id="@+id/EditChar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/btn1"
                android:text="@string/edit_profile" />


            <Button
                android:id="@+id/DeleteChar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/delete"
                android:text="@string/Delete"
                android:textColor="#FFEBEE"
                tools:ignore="TextContrastCheck" />




        </LinearLayout>


    </ScrollView>


</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>